[gd_scene load_steps=3 format=3 uid="uid://dgrs28su17qwg"]

[ext_resource type="Texture2D" uid="uid://blfoi2s7inu41" path="res://contestants.jpg" id="1_7pj2l"]
[ext_resource type="Script" path="res://halfway.gd" id="1_nev0g"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nev0g")

[node name="BoxContainer" type="BoxContainer" parent="."]
offset_right = 1148.0
offset_bottom = 644.0

[node name="TextureRect" type="TextureRect" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_7pj2l")
expand_mode = 1
stretch_mode = 5

[node name="team1_score" type="CenterContainer" parent="BoxContainer/TextureRect"]
layout_mode = 0
offset_left = 193.0
offset_top = 234.0
offset_right = 306.0
offset_bottom = 292.0

[node name="score" type="RichTextLabel" parent="BoxContainer/TextureRect/team1_score"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "0"
fit_content = true
autowrap_mode = 0

[node name="team2_score" type="CenterContainer" parent="BoxContainer/TextureRect"]
layout_mode = 0
offset_left = 545.0
offset_top = 234.0
offset_right = 658.0
offset_bottom = 292.0

[node name="score" type="RichTextLabel" parent="BoxContainer/TextureRect/team2_score"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "0"
fit_content = true
autowrap_mode = 0

[node name="team3_score" type="CenterContainer" parent="BoxContainer/TextureRect"]
layout_mode = 0
offset_left = 897.0
offset_top = 234.0
offset_right = 1010.0
offset_bottom = 292.0

[node name="score" type="RichTextLabel" parent="BoxContainer/TextureRect/team3_score"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "0"
fit_content = true
autowrap_mode = 0

[node name="team1_name" type="CenterContainer" parent="BoxContainer/TextureRect"]
layout_mode = 0
offset_left = 193.0
offset_top = 302.0
offset_right = 306.0
offset_bottom = 371.0

[node name="label" type="RichTextLabel" parent="BoxContainer/TextureRect/team1_name"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center]team 1[/center]"
fit_content = true

[node name="team2_name" type="CenterContainer" parent="BoxContainer/TextureRect"]
layout_mode = 0
offset_left = 545.0
offset_top = 302.0
offset_right = 658.0
offset_bottom = 371.0

[node name="label" type="RichTextLabel" parent="BoxContainer/TextureRect/team2_name"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center]team 2[/center]"
fit_content = true

[node name="team3_name" type="CenterContainer" parent="BoxContainer/TextureRect"]
layout_mode = 0
offset_left = 897.0
offset_top = 302.0
offset_right = 1010.0
offset_bottom = 371.0

[node name="label" type="RichTextLabel" parent="BoxContainer/TextureRect/team3_name"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center]team 3[/center]"
fit_content = true
